--- a/package.json
+++ b/package.json
@@ -5,28 +5,36 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "babel-plugin-styled-components": "^1.13.2",
-    "gatsby": "^3.9.1",
-    "gatsby-image": "^3.9.0",
-    "gatsby-plugin-gatsby-cloud": "^2.9.1",
-    "gatsby-plugin-image": "^1.9.0",
-    "gatsby-plugin-manifest": "^3.9.0",
-    "gatsby-plugin-offline": "^4.9.0",
-    "gatsby-plugin-react-helmet": "^4.9.0",
-    "gatsby-plugin-sharp": "^3.9.0",
-    "gatsby-plugin-styled-components": "^4.9.0",
-    "gatsby-source-filesystem": "^3.9.0",
-    "gatsby-transformer-json": "^3.9.0",
-    "gatsby-transformer-sharp": "^3.9.0",
+    "@emotion/core": "^11.0.0",
+    "@emotion/css": "^11.0.0",
+    "@emotion/react": "^11.1.2",
+    "@emotion/styled": "^11.0.0",
+    "babel-plugin-styled-components": "^1.12.0",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "gatsby": "^2.26.1",
+    "gatsby-background-image": "^1.3.1",
+    "gatsby-image": "^2.7.0",
+    "gatsby-plugin-manifest": "^2.6.1",
+    "gatsby-plugin-offline": "^3.4.0",
+    "gatsby-plugin-react-helmet": "^3.4.0",
+    "gatsby-plugin-sharp": "^2.10.0",
+    "gatsby-plugin-styled-components": "^3.6.0",
+    "gatsby-source-filesystem": "^2.5.0",
+    "gatsby-transformer-json": "^2.7.0",
+    "gatsby-transformer-sharp": "^2.8.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0",
-    "styled-components": "^5.3.0"
+    "react-icons": "^4.1.0",
+    "style-loader": "^2.0.0",
+    "styled-components": "^5.2.1",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
-    "prettier": "2.3.2"
+    "gh-pages": "^3.1.0",
+    "prettier": "2.1.2"
   },
   "keywords": [
     "gatsby"
